config Appsetting: add token key

--- a/ElearningWebsite.API/appsettings.json
+++ b/ElearningWebsite.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+    "AppSettings": {
+        "Token": "Sup3r s3cr3t k3y"
+    },
     "ConnectionStrings": {
         "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=kien1998;Database=ElearningWebsite;"
     },
