Add Imgur auth key and Cloudinary auth key

--- a/ElearningWebsite.API/appsettings.json
+++ b/ElearningWebsite.API/appsettings.json
@@ -2,13 +2,26 @@
     "AppSettings": {
         "Token": "Sup3r s3cr3t k3y"
     },
+
     "ConnectionStrings": {
         "DefaultConnection": "Host=localhost;Port=5432;Username=postgres;Password=kien1998;Database=ElearningWebsite;"
     },
+
     "Logging": {
         "LogLevel": {
             "Default": "Warning"
         }
     },
-    "AllowedHosts": "*"
+
+    "AllowedHosts": "*",
+    "ImgurSettings": {
+        "ClientId": "5a538d5468f86f8",
+        "ClientSecret": "152cd239af8368f58c4952bd51e97991cc457da6"
+    },
+
+    "CloudinarySettings": {
+        "CloudName": "dekj6ujzr",
+        "ApiKey": "165126113252299",
+        "ApiSecret": "LB7VWvm7JYjCu9d2a6SWWIaC3q4"
+    }
 }
