--- a/ElearningWebsite.API/ElearningWebsite.API.csproj
+++ b/ElearningWebsite.API/ElearningWebsite.API.csproj
@@ -11,5 +11,6 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.1.0"/>
     <PackageReference Include="NpgSql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.1"/>
     <PackageReference Include="AutoMapper" Version="8.0.0"/>
+    <PackageReference Include="Imgur.API.NetCore" Version="1.0.1"/>
   </ItemGroup>
 </Project>
