Add alertifyjs, bootstrap themes

--- a/ElearningWebsite-SPA/package.json
+++ b/ElearningWebsite-SPA/package.json
@@ -22,8 +22,10 @@
         "@angular/router": "^6.0.3",
         "@auth0/angular-jwt": "^2.1.0",
         "@ng-bootstrap/ng-bootstrap": "^4.1.1",
+        "alertifyjs": "^1.11.2",
         "angular-jwt": "^0.1.11",
         "bootstrap": "^4.3.1",
+        "bootswatch": "^4.3.1",
         "core-js": "^2.5.4",
         "font-awesome": "^4.7.0",
         "rxjs": "6.0.0",
